--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,8 +3,20 @@ os: linux
 files:
   - source: /dist
     destination: /var/www/example/html
-#hooks:
-#  BeforeInstall:
-#    - location: scripts/cleanup.sh
-#      timeout: 300
-#      runas: root
+hooks:
+    BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
+    AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
+    ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root
+    ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
