Update after install path

--- a/appspec.yml
+++ b/appspec.yml
@@ -9,7 +9,7 @@ hooks:
       timeout: 300
       runas: root
     AfterInstall:
-    - location: scripts/after_install.sh
+    - location: /var/www/scripts/after_install.sh
       timeout: 300
       runas: root
     ApplicationStart:
