--- a/appspec.yml
+++ b/appspec.yml
@@ -2,14 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: .
-    destination: /var/www/example/html
+    destination: /var/www/image-uploader-devchallenges-io
 hooks:
     BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
       runas: root
     AfterInstall:
-    - location: /var/www/scripts/after_install.sh
+    - location: scripts/after_install.sh
       timeout: 300
       runas: root
     ApplicationStart:
