--- a/appspec.yml
+++ b/appspec.yml
@@ -7,16 +7,16 @@ hooks:
     BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: root
+      runas: bitnami
     AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: root
+      runas: bitnami
     ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: root
+      runas: bitnami
     ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
-      runas: root
+      runas: bitnami
